# dbt-viz

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dbt_viz/: __init__.py  cli.py  columns.py  manifest.py  server.py  sql_lineage.py
dbt_viz/templates/: index.html
tests/: conftest.py  test_cli.py  test_columns.py  test_manifest.py  test_server.py  test_sql_lineage.py
tests/fixtures/: catalog.json  manifest.json
tests/fixtures/compiled/my_project/models/marts/: dim_customers.sql  fct_orders.sql
tests/fixtures/compiled/my_project/models/staging/: stg_customers.sql  stg_orders.sql
