[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dbt-viz"
dynamic = ["version"]
description = "Interactive visualization tool for dbt model lineage"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlglot>=20.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/dbt-viz"
Repository = "https://github.com/your-username/dbt-viz"
Issues = "https://github.com/your-username/dbt-viz/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0",
    "build>=1.0",
]

[project.scripts]
dbt-viz = "dbt_viz.cli:app"

[tool.hatch.version]
path = "dbt_viz/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["dbt_viz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
